# tsc

compiler/: BodyCompiler.js  BodyCompiler.js.map  BodyCompiler.ts  CCompiler.js  CCompiler.js.map  CCompiler.ts  Compiler.js  Compiler.js.map  Compiler.ts  FileCompiler.js  FileCompiler.js.map  FileCompiler.ts  main.js  main.js.map  main.ts  tsconfig.json
demo/: CMakeCache.txt  CMakeLists.txt  Demo.cc  Demo.h  Demo.ts  Main.cc  Main.h  Main.ts  Makefile  cmake_install.cmake  main  tsconfig.json
demo/cc/: CMakeLists.txt  Demo.cc  Demo.h  Makefile  cmake_install.cmake
kk/: kk.cc  kk.d.ts  kk.h
lib/: Console.ts
